# SEnSeIv2

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
senseiv2/: constants.py  inference.py  models.py  train.py  utils.py
senseiv2/data/: dataset.py  sliding_window.py  transforms.py
