[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senseiv2-test2"
version = "1.1"
authors = [
  { name="Alistair Francis", email="alistair.m.francis@gmail.com" },
]
description = "Sensor Independent Cloud and Shadow Masking with Partial Labels and Multimodal Inputs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "huggingface-hub >= 0.17",
    "numpy",
    "matplotlib >= 3.6.2",
    "pyyaml >= 6.0",
    "rasterio >= 1.3.4",
    "scikit-image >= 0.19.3",
    "segmentation-models-pytorch == 0.3.2",
    "six",
    "torchmetrics >= 1.1",
    "transformers >= 4.34.0",
    "wandb >= 0.15.12"
]

[project.urls]
Homepage = "https://github.com/aliFrancis/SEnSeIv2"
Issues = "https://github.com/aliFrancis/SEnSeIv2/issues"
